<resources>
    <string name="app_name">HenriPotier_kotlin</string>
    <string name="book1_button">Add book1</string>
    <string name="book2_button">add book2</string>
    <string name="book3_button">add book3</string>
    <string name="cartDetails_text">Votre panier est vide</string>
    <string name="sum_text">0</string>
    <string name="getDiscount_button">Obtenir une remise</string>
    <string name="discountPrice_text">Demandez-votre remise ci-dessus</string>
    <string name="book4_button">Add book4</string>
    <string name="book5_button">Add book5</string>
    <string name="priceAfterDiscount_text">Ici s\'affichera le prix après remise</string>
    <string name="reset_button">Reset</string>
    <string name="bookData_text">Pas encore reçu</string>
    <string name="send_request">Send request</string>
    <string name="header">Header</string>
    <string name="content_description">Cover of the book</string>
    <string name="totalprice">TotalPrice</string>
    <string name="bookTitle_text">coucou_text</string>
    <string name="detailsbutton_text">En savoir plus</string>
    <string name="AddToCart_text">Ajouter</string>
    <string name="titleBook">TitleBookInit</string>
    <string name="priceBook">TextView</string>
    <string name="removeButton">Supprimer</string>
    <string name="contentDescription">Couverture du book</string>

</resources>